force-app/main/default/objects/Pricing_List__c/Pricing_List__c.object-meta.xml
<CustomObject>
    <label>Pricing List</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Pricing List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>