force-app/main/default/objects/Pricing_List__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <formula>IF(

AND(

ISPICKVAL(Charge_Type__c, &apos;PSF&apos;), ISPICKVAL(Calculation_Area_Type__c, &apos;Saleable Area&apos;)), Charge_Rate__c* Unit__r.Saleable_Area__c ,

IF(

AND(

ISPICKVAL(Charge_Type__c, &apos;PSF&apos;), ISPICKVAL( Calculation_Area_Type__c , &apos;Carpet Area&apos;)), Charge_Rate__c*  Unit__r.Total_carpet_Sq_Ft__c ,

IF(AND(ISPICKVAL(Charge_Type__c, &apos;Lumpsum&apos;)),
   Charge_Amount__c,0)

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>