force-app/main/default/objects/Pricing_List__c/fields/Calculation_Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Area_Type__c</fullName>
    <label>Calculation Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Saleable Area</fullName>
            </value>
            <value>
                <fullName>Carpet Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>