force-app/main/default/objects/Pricing_List__c/fields/Charge_Description__c.field-meta.xml
<CustomField>
    <fullName>Charge_Description__c</fullName>
    <label>Charge Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>