force-app/main/default/objects/Pricing_List__c/fields/Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name__c</fullName>
    <label>Charge Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Charge_Name</valueSetName>
    </valueSet>
</CustomField>