force-app/main/default/objects/Pricing_List__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GST %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>