force-app/main/default/objects/Pricing_List__c/fields/Stamp_Duty_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Stamp Duty Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>