force-app/main/default/objects/Pricing_List__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Pricing List</relationshipLabel>
    <relationshipName>Pricing_List</relationshipName>
    <type>Lookup</type>
</CustomField>