force-app/main/default/objects/Pricing_List__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Pricing Lists</relationshipLabel>
    <relationshipName>Pricing_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>